tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ExtendsOrImplementsClauses/parserErrorRecovery_ExtendsOrImplementsClause2.ts (2 errors) ====
    class C extends A, {
                     ~
!!! error TS1005: '{' expected.
                    ~
!!! error TS2304: Cannot find name 'A'.
    }